--- a/1desain.html
+++ b/1desain.html
@@ -636,9 +636,9 @@ body {
   </div>
 
   <div class="hero-shapes">
-    <div class="box slot-1" data-slot="1" style="background-image:url('jl1.png')"></div>
-    <div class="box slot-2" data-slot="2" style="background-image:url('jl2.png')"></div>
-    <div class="box slot-3" data-slot="3" style="background-image:url('jl3.png')"></div>
+    <div class="box slot-1" data-slot="1" style="background-image:url('gd1.jpeg')"></div>
+    <div class="box slot-2" data-slot="2" style="background-image:url('gd2.jpeg')"></div>
+    <div class="box slot-3" data-slot="3" style="background-image:url('gd3.jpeg')"></div>
   </div>
 </section>
 
@@ -647,7 +647,7 @@ body {
     
     <!-- LEFT IMAGE -->
     <div class="about-image">
-      <img src="jl4.png" alt="Jasa Desain Grafis Visualayz HQ">
+      <img src="lgd.jpeg" alt="Jasa Desain Grafis Visualayz HQ">
     </div>
 
     <!-- RIGHT CONTENT -->
