--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@ body {
 }
 
 .hero-content {
-  max-width: 600px;
+  max-width: 640px;
+  padding-right: 40px;
   color: #fff;
 }
 
@@ -70,12 +71,12 @@ body {
 }
 
 .hero-title {
-  font-size: 48px;
-  font-weight: 700;
-  line-height: 1.2;
-  letter-spacing: -0.5px;
+ font-size: clamp(52px, 6vw, 78px); /* LEBIH BESAR */
+  font-weight: 800;
+  line-height: 1.12;
+  letter-spacing: -0.8px;
   color: #ffffff;
-  max-width: 560px;
+  max-width: 640px;
 }
 
 /* Highlight keyword */
@@ -109,8 +110,8 @@ body {
 /* BOX AREA */
 .hero-shapes {
   position: relative;
-  width: 420px;
-  height: 420px;
+  width: 520px;   /* LEBIH BESAR */
+  height: 480px;
 }
 
 .box {
@@ -127,49 +128,54 @@ body {
     transform 1.4s cubic-bezier(.34,1.56,.64,1),
     opacity 1.2s ease,
     filter 1.2s ease;
+     box-shadow:
+    0 30px 60px rgba(0,0,0,.35),
+    inset 0 0 0 1px rgba(255,255,255,.1);
 }
 
 /* SLOT 1 – PALING BELAKANG */
 .slot-1 {
-  width: 220px;
-  height: 220px;
+  width: 260px;
+  height: 260px;
   top: 0;
-  right: 40px;
+  right: 60px;
 
   z-index: 1;
   opacity: 0.35;
   filter: blur(1.5px) brightness(0.75);
-  transform: scale(0.88) translateY(8px);
+  transform: scale(0.9) translateY(10px);
 }
+
 
 /* SLOT 2 – NETRAL */
 .slot-2 {
-  width: 240px;
-  height: 240px;
-  top: 90px;
-  right: 150px;
+  width: 300px;
+  height: 300px;
+  top: 100px;
+  right: 180px;
 
   z-index: 2;
   opacity: 1;
   filter: none;
-  transform: scale(1) translateY(0);
+  transform: scale(1);
 }
 
 /* SLOT 3 – DEPAN (SEDIKIT OVERSHOOT) */
 .slot-3 {
-  width: 220px;
-  height: 220px;
-  top: 190px;
-  right: 20px;
+  width: 280px;
+  height: 280px;
+  top: 220px;
+  right: 40px;
 
   z-index: 3;
   opacity: 1;
   filter: none;
-  transform: scale(1.08) translateY(-6px);
+  transform: scale(1.1);
 }
 
 
-/* SLOT DEPAN (highlight) */
+
+/* SLOT DEPAN (highlight)
 .slot-3 {
   width: 220px;
   height: 220px;
@@ -180,35 +186,90 @@ body {
   opacity: 1;
   filter: none;
   transform: scale(1.05);
-}
+} */
 
 
 /* RESPONSIVE */
 @media (max-width: 900px) {
   .hero {
     flex-direction: column;
+    justify-content: center;   /* CENTER VERTIKAL */
+    align-items: center;       /* CENTER HORIZONTAL */
     text-align: center;
-    padding: 120px 20px 30px; /* bawah diperkecil */
+    padding: 120px 20px 40px;
+  }
+
+
+
+  .hero-content {
+    max-width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
   .hero-title {
-    font-size: 34px;
-    margin-bottom: 20px; /* JARAK KE BOX DIKECILKAN */
+    font-size: 36px;
+    line-height: 1.15;
+    margin-bottom: 20px;
+    text-align: center;
   }
 
+  /* RESET VISUAL AREA */
   .hero-shapes {
-    margin-top: 20px; /* sebelumnya terlalu jauh */
-    transform: scale(0.9);
+    width: 100%;
+    height: 300px;
+    margin-top: 10px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    position: relative;
+  }
+
+  /* RESET POSISI BOX */
+  .box {
+    position: absolute;
+    transition: none; /* MOBILE: STABIL */
+  }
+
+  .slot-1 {
+    width: 160px;
+    height: 160px;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%) scale(0.9);
+    opacity: 0.3;
+  }
+
+  .slot-2 {
+    width: 190px;
+    height: 190px;
+    top: 50px;
+    left: 50%;
+    transform: translateX(-50%);
+    opacity: 1;
+    z-index: 2;
+  }
+
+  .slot-3 {
+    width: 180px;
+    height: 180px;
+    top: 110px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 3;
   }
 }
 
 @media (max-width: 768px) {
   .hero .logo-wrapper {
     position: absolute !important;
-    top: 14px !important;
-    left: 14px !important;
+    top: 12px !important;
+    left: 12px !important;
 
-    width: 70px !important;   /* KECIL */
+    width: 56px !important;   /* 🔥 LEBIH KECIL */
     margin: 0 !important;
     padding: 0 !important;
 
@@ -455,6 +516,27 @@ body {
   }
 }
 
+/* BRAND TITLE */
+.brand-title {
+  font-size: 34px;
+  font-weight: 700;
+  color: #ffffff;
+  text-align: center;
+  margin-bottom: 50px;
+  letter-spacing: 0.5px;
+  
+}
+
+/* MOBILE */
+@media (max-width: 768px) {
+  .brand-title {
+    font-size: 24px;
+    text-align: center;      /* lebih natural di mobile */
+    margin-bottom: 30px;
+  }
+}
+
+
 /* PRICING SECTION */
 .pricing-section {
   padding: 120px 80px;
@@ -659,7 +741,139 @@ body {
   }
 }
 
+/* CTA BUTTON - WHATSAPP */
+.cta-button.wa {
+  display: inline-flex;
+  align-items: center;
+  gap: 12px;
+  padding: 18px 44px;
+  font-size: 20px;
+  font-weight: 700;
+  color: #ffffff;
+  background: linear-gradient(90deg, #25d366, #1ebe5d);
+  border-radius: 999px;
+  text-decoration: none;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
 
+.cta-button.wa:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 16px 40px rgba(37, 211, 102, 0.45);
+}
+
+.wa-icon {
+  font-size: 22px;
+  line-height: 1;
+}
+
+
+
+
+@media (max-width: 768px) {
+  .logo-wrapper {
+    position: absolute !important;
+    top: 12px !important;
+    left: 12px !important;
+
+    width: 80px !important;   /* KECIL BENERAN */
+    height: auto !important;
+
+    z-index: 9999 !important;
+  }
+
+  /* INI KUNCINYA */
+  .logo-wrapper img {
+    height: auto !important;
+    width: 100% !important;
+    max-height: none !important;
+  }
+}
+
+@media (max-width: 768px) {
+  .hero {
+    min-height: 100vh;
+    padding: 120px 20px 40px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+
+    text-align: center;
+  }
+
+.hero-content {
+    max-width: 100%;
+    margin-bottom: 32px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .hero-title {
+    font-size: 34px;
+    line-height: 1.15;
+    letter-spacing: -0.4px;
+    max-width: 320px;   /* 🔑 BIAR STACK KE BAWAH */
+  }
+
+  .hero-title span,
+  .hero-title strong {
+    display: inline-block;
+  }
+
+  .hero-shapes {
+    width: 100%;
+    height: 320px;
+    position: relative;
+
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+  }
+
+ .box {
+  position: absolute;
+  border-radius: 6px;
+  background-size: cover;
+  background-position: center;
+
+  transition:
+    transform 2s cubic-bezier(.22,1,.36,1),
+    opacity 1.6s ease,
+    filter 1.6s ease;
+}
+
+
+
+  .slot-1 {
+    bottom: 40px;
+    left: 50%;
+    transform: translateX(-60%) scale(0.9);
+    opacity: 0.3;
+    filter: blur(1.5px);
+    z-index: 1;
+  }
+
+  .slot-2 {
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%) scale(1);
+    opacity: 1;
+    filter: none;
+    z-index: 2;
+  }
+
+  .slot-3 {
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-35%) scale(1.05);
+    opacity: 1;
+    filter: none;
+    z-index: 3;
+  }
+}
 
 
 </style>
@@ -715,6 +929,8 @@ body {
 </section>
 
 <section class="brand-section">
+  <h2 class="brand-title">Contoh Logo Brand Guidelines</h2>
+
   <div class="brand-card">
 
     <!-- LOGO VARIATIONS -->
@@ -762,7 +978,7 @@ body {
         <span class="price">80K <small>/ Desain</small></span>
       </div>
 
-      <div class="pricing-row highlight">
+      <div class="pricing-row">
         <span class="service">Logo</span>
         <span class="price">750K <small>/ Guidelines</small></span>
       </div>
@@ -791,9 +1007,17 @@ body {
       Tersedia Paket Desain Bundled 6 konten + research + posting
     </p>
 
-    <a href="#contact" class="cta-button">
-      HUBUNGI SEKARANG!
-    </a>
+    <a
+  href="https://wa.me/6281211679167?text=Halo%20Visualayz%20HQ,%20saya%20tertarik%20dengan%20layanan%20Visualayz.%20Mohon%20informasinya."
+  target="_blank"
+  class="cta-button wa"
+>
+  <span class="wa-icon">💬</span>
+Hubungi via WhatsApp
+</a>
+
+
+
   </div>
 </section>
 
@@ -801,24 +1025,49 @@ body {
 
 
 <script>
-const boxes = Array.from(document.querySelectorAll('.box'));
-const TOTAL_SLOTS = 3;
-const INTERVAL = 3800;
+// const boxes = Array.from(document.querySelectorAll('.box'));
+// const TOTAL_SLOTS = 3;
+// const INTERVAL = 3800;
 
-function animateBoxes() {
-  boxes.forEach((box, index) => {
-    setTimeout(() => {
-      const current = parseInt(box.dataset.slot);
-      const next = current === TOTAL_SLOTS ? 1 : current + 1;
+// function animateBoxes() {
+//   boxes.forEach((box, index) => {
+//     setTimeout(() => {
+//       const current = parseInt(box.dataset.slot);
+//       const next = current === TOTAL_SLOTS ? 1 : current + 1;
+
+//       box.classList.remove(`slot-${current}`);
+//       box.classList.add(`slot-${next}`);
+//       box.dataset.slot = next;
+//     }, index * 120); // micro-stagger
+//   });
+// }
+
+// setInterval(animateBoxes, INTERVAL);
+
+
+
+const boxes = document.querySelectorAll('.box');
+  const TOTAL = 3;
+  const INTERVAL = 3600;
+
+  function rotate() {
+    boxes.forEach(box => {
+      const current = Number(box.dataset.slot);
+      const next = current === TOTAL ? 1 : current + 1;
 
       box.classList.remove(`slot-${current}`);
       box.classList.add(`slot-${next}`);
       box.dataset.slot = next;
-    }, index * 120); // micro-stagger
-  });
-}
+    });
+  }
 
-setInterval(animateBoxes, INTERVAL);
+  // tunggu layout siap
+  setTimeout(() => {
+    rotate();
+    setInterval(rotate, INTERVAL);
+  }, 600);
+
+  
 </script>
 
 
